--- a/firstPage.html
+++ b/firstPage.html
@@ -42,11 +42,15 @@
   <img src="./images/beach.png" alt="" width="110em">
   <p>Beach</p>
 </div>
+
+<div class="random">
+  <img src="./images/random.png" alt="" width="110em">
+  <p>Random</p>
+</div> 
 </section>
 
-<div class="backToTop">
-  <i class="fas fa-sort-up"></i>
-</div>
+<div id="btn-up" class="btn-back-up" onclick="window.location='firstPage.html'"> <i class="far fa-arrow-alt-circle-up"></i></i> Scroll to Top</div>
+
 
 
 </body>
