--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 
+  <div class="loginWrapper">
 <!-- header-->
 <header class="loginHeader">
  <h1>UNTRVLD.</h1>
@@ -24,7 +25,7 @@
 <p>or</p>
 <div class="signUp">Sign Up</div>
 </section>
-
+</div>
 
 
 
