--- a/firstPage.html
+++ b/firstPage.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <title>UNTRVLD.</title>
+  <script src="scripts.js"></script>
 </head>
 <body class="second">
 <!-- header -->
@@ -18,6 +19,8 @@
  </div>
 
 </header>
+
+<a id="button"></a>
 
   <p class="middle">Your next adventure location:</p>
 
@@ -48,9 +51,6 @@
   <p>Random</p>
 </div> 
 </section>
-
-<div id="btn-up" class="btn-back-up" onclick="window.location='firstPage.html'"> <i class="far fa-arrow-alt-circle-up"></i></i> Scroll to Top</div>
-
 
 
 </body>
