--- a/firstPage.html
+++ b/firstPage.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <title>UNTRVLD.</title>
-  <script src="scripts.js"></script>
+  <script src="/scripts.js"></script>
 </head>
 <body class="second">
 <!-- header -->
