--- a/firstPage.html
+++ b/firstPage.html
@@ -17,10 +17,7 @@
  <div class="image">
    <a href="" class="profileAvatar">JK</a>
  </div>
-
 </header>
-
-<a id="button"></a>
 
   <p class="middle">Your next adventure location:</p>
 
@@ -52,6 +49,12 @@
 </div> 
 </section>
 
+<div class="btn-wrapper">
+<div class="back-to-top" id="back-top-btn">
+  <i class="fas fa-caret-square-up"></i>
+</div>
+</div>
+</body>
 
 </body>
 </html>
