--- a/firstPage.html
+++ b/firstPage.html
@@ -33,7 +33,7 @@
   <p>Countryside</p>
 </div>      
   
-<div class="mountains">
+<div class="mountains" onclick="window.location='Mountains.html';">
   <img src="./images/mountains.png" alt="" width="110em">
   <p>Mountains</p>
 </div>
