--- a/Mountains.html
+++ b/Mountains.html
@@ -13,27 +13,27 @@
 <body>
 <!--- IMAGE 1-->
 <div class="firstImg">
-  <img src="./images/countryOne.png" width="500em">
+  <img src="./images/mtnsOne.png" width="500em">
 </div>
 <!--- ARTICLE 1-->
 <div class="firstArticle">
-<h1 class="firstHeading cntry-heading-one">COUNTRYSIDE</h1>
+<h1 class="firstHeading mtns-heading-one">MOUNTAINS</h1>
 <p class="articleCity">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis earum assumenda delectus necessitatibus officiis, maxime cumque mollitia qui optio quasi veniam adipisci quibusdam natus!
 </p>
 </div>
 <!--- IMAGE 2-->
 <div class="secondImg">
-  <img src="./images/countryTwo.png" width="500em">
+  <img src="./images/mtnsTwo.png" width="500em">
 </div>
 <!--- ARTICLE 2-->
 <div class="secondArticle">
-<h1 class="secondHeading cntry-heading-two">WALKING</h1>
+<h1 class="secondHeading mtns-heading-two">TREKKING</h1>
 <p class="articleNightlife">
   Suspendisse sagittis ultrices augue. Mauris metus. Praesent in mauris eu tortor porttitor accumsan. Nunc dapibus tortor vel mi dapibus sollicitudin. Aliquam erat volutpat. Nullam eget nisl. Etiam dictum tincidunt.
 </p>
 </div>
-<!--- BUTTON EMAIL-->
+<!--- BUTTON EMAIL-->s
 <div class="btn-email-city">Send suggestions!</div>
 <div class="btn-back-city" onclick="window.location='firstPage.html'"> <i class="fas fa-long-arrow-alt-left"></i> Go back</div>
 </body>
