--- a/Beach.html
+++ b/Beach.html
@@ -13,22 +13,22 @@
 <body>
 <!--- IMAGE 1-->
 <div class="firstImg">
-  <img src="./images/mtnsOne.png" width="500em">
+  <img src="./images/chill.png" width="300em" height="300em">
 </div>
 <!--- ARTICLE 1-->
 <div class="firstArticle">
-<h1 class="firstHeading mtns-heading-one">MOUNTAINS</h1>
+<h1 class="firstHeading mtns-heading-one">BEACH</h1>
 <p class="articleCity">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis earum assumenda delectus necessitatibus officiis, maxime cumque mollitia qui optio quasi veniam adipisci quibusdam natus!
 </p>
 </div>
 <!--- IMAGE 2-->
 <div class="secondImg">
-  <img src="./images/mtnsTwo.png" width="500em">
+  <img src="./images/surf.png" width="500em">
 </div>
 <!--- ARTICLE 2-->
 <div class="secondArticle">
-<h1 class="secondHeading mtns-heading-two">TREKKING</h1>
+<h1 class="secondHeading mtns-heading-two">SURFING</h1>
 <p class="articleNightlife">
   Suspendisse sagittis ultrices augue. Mauris metus. Praesent in mauris eu tortor porttitor accumsan. Nunc dapibus tortor vel mi dapibus sollicitudin. Aliquam erat volutpat. Nullam eget nisl. Etiam dictum tincidunt.
 </p>
