--- a/firstPage.html
+++ b/firstPage.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="beach">
-  <img src="./images/beach.png" onclick="window.location='Beach.html';" alt="" width="110em">
+  <img src="./images/beach.png" width="110em">
   <p>Beach</p>
 </div>
 
