--- a/firstPage.html
+++ b/firstPage.html
@@ -38,7 +38,7 @@
   <p>Mountains</p>
 </div>
 
-<div class="beach">
+<div class="beach" onclick="window.location='Beach.html';">
   <img src="./images/beach.png" width="110em">
   <p>Beach</p>
 </div>
