firstPage scripts added
random button now works, back to top button works

--- a/firstPage.html
+++ b/firstPage.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <title>UNTRVLD.</title>
-  <script src="/scripts.js"></script>
 </head>
 <body class="second">
 <!-- header -->
@@ -23,22 +22,22 @@
 
 <section class="contentFirst">
 
-<div class="city" onclick="window.location='City.html';">
+<div class="city divs" onclick="window.location='City.html';">
   <img src="./images/city.png" alt="" width="110em">
   <p>City</p>
 </div>
 
-<div class="countryside" onclick="window.location='Countryside.html';">
+<div class="countryside divs" onclick="window.location='Countryside.html';">
   <img src="./images/countryside.png" alt="" width="110em">
   <p>Countryside</p>
 </div>      
   
-<div class="mountains" onclick="window.location='Mountains.html';">
+<div class="mountains divs" onclick="window.location='Mountains.html';">
   <img src="./images/mountains.png" alt="" width="110em">
   <p>Mountains</p>
 </div>
 
-<div class="beach" onclick="window.location='Beach.html';">
+<div class="beach divs" onclick="window.location='Beach.html';">
   <img src="./images/beach.png" width="110em">
   <p>Beach</p>
 </div>
@@ -54,7 +53,10 @@
   <i class="fas fa-caret-square-up"></i>
 </div>
 </div>
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="scripts.js"></script>
 </body>
 
-</body>
+
 </html>
