USER SETTINGS JS HREF READY

--- a/firstPage.html
+++ b/firstPage.html
@@ -14,8 +14,10 @@
 <header class="welcomeHeader">
 <p class="welcomeBack"> Welcome back Jan !</p>
  <div class="image">
-   <a href="" class="profileAvatar">JK</a>
+    
+   <a id="showSettings" class="profileAvatar"></a>
  </div>
+  
 </header>
 
   <p class="middle">Your next adventure location:</p>
