--- a/Mountains.html
+++ b/Mountains.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!--- IMAGE 1-->
-<div class="firstImg">
+<div class="firstImg mntns">
   <img src="./images/mtnsOne.png" width="500em">
 </div>
 <!--- ARTICLE 1-->
