fix beach a alignmnty

--- a/Beach.html
+++ b/Beach.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <!--- IMAGE 1-->
-<div class="firstImg">
-  <img src="./images/beachOne.png" width="300em" height="300em">
+<div class="firstImg bch">
+  <img src="./images/fewf.png" width="400em">
 </div>
 <!--- ARTICLE 1-->
 <div class="firstArticle">
