settings added, need js to change values

--- a/Settings.html
+++ b/Settings.html
@@ -12,10 +12,42 @@
 </head>
 <body>
 
-<a>settings</a>
+<div class="profile-photo-card">
+    <div class="nophoto-text">
+        JK
+    </div>
+</div>
+<!-- USER DETAILS -->
+<div class="details-wrapper">
+    
+    <div class="dt username">
+    <p>Name<i class="far fa-edit"></i></p> 
+    <a>Jan</a>
+    </div>
 
+    <div class="dt location">
+        <p>Location<i class="far fa-edit"></i></p>
+        <a>Melnik, Czech Republic</a>
+    </div>
 
+    <div class="dt email">
+            <p>E-mail<i class="far fa-edit"></i></p> 
+            <a>kankovskyj@email.cz</a>
+    </div>
 
+    <div class="dt number">
+            <p>Number<i class="far fa-edit"></i></p>
+            <a>+420 774 991 403</a> 
+        </div>
+
+    <div class="dt level">
+    <p>Rank</p>
+    <a>NO RANK</a>
+</div>
+
+</div>
+
+<div class="btn-back-city settinx" onclick="window.location='firstPage.html'"> <i class="fas fa-long-arrow-alt-left"></i> Go back</div>
 
 </body>
 </html>
