--- a/Settings.html
+++ b/Settings.html
@@ -22,7 +22,7 @@
     
     <div class="dt username">
     <p>Name<i class="far fa-edit"></i></p> 
-    <a>Jan</a>
+    <a>Jan Kankovsky</a>
     </div>
 
     <div class="dt location">
