landscape mode block
terrible, but only way to limit users from using landscape mode alltogether.

--- a/Beach.html
+++ b/Beach.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- TO BE ADDED WHEN SUPPORTED FOR FORCING PORTRAIT MODE <link rel="manifest" href="manifest.json"> -->
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen and (orientation: portrait)">
+  <link rel="stylesheet" type="text/css" href="landscapeBlock.css" media="screen and (orientation: landscape)">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <title>UNTRVLD.</title>
@@ -33,7 +35,7 @@
   Suspendisse sagittis ultrices augue. Mauris metus. Praesent in mauris eu tortor porttitor accumsan. Nunc dapibus tortor vel mi dapibus sollicitudin. Aliquam erat volutpat. Nullam eget nisl. Etiam dictum tincidunt.
 </p>
 </div>
-<!--- BUTTON EMAIL-->s
+<!--- BUTTON EMAIL-->
 <div class="btn-email-city">Send suggestions!</div>
 <div class="btn-back-city" onclick="window.location='firstPage.html'"> <i class="fas fa-long-arrow-alt-left"></i> Go back</div>
 </body>
