--- a/City.html
+++ b/City.html
@@ -36,7 +36,7 @@
 </p>
 </div>
 <!--- BUTTON EMAIL-->
-<div class="btn-email-city">Send suggestions!</div>
+<div class="btn-email-city">Send me suggestions!</div>
 <div class="btn-back-city" onclick="window.location='firstPage.html'"> <i class="fas fa-long-arrow-alt-left"></i> Go back</div>
 </body>
 </html>
