minor ui changes

--- a/Settings.html
+++ b/Settings.html
@@ -48,7 +48,8 @@
 </div>
 
 </div>
-
+<!-- add logout icon down here-->
+<div class="btn-logout mg-top" onclick="window.location='index.html'">Log out</div>
 <div class="btn-back-city settinx" onclick="window.location='firstPage.html'"> <i class="fas fa-long-arrow-alt-left"></i> Go back</div>
 
 </body>
