--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!-- header-->
 <header class="loginHeader">
  <h1>UNTRVLD.</h1>
- <h2>Start Your Adventure!</h2>
- <img src="./images/airport.png" alt="" height="250px" width="290px">
+ <h2>Where next?</h2>
+ <img src="./images/airport.png" alt="" height="240px" width="270px">
 </header>
 <!-- login signup buttons-->
 <section class="buttonsSection">
